<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:fitsSystemWindows="true"
    android:weightSum="1">

    <Button
        android:id="@+id/cmdPrincipal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorFeco1"
        android:clickable="true"
        android:onClick="lanzarprincipal"
        android:text="@string/lt_volver_a_la_pantalla_inicial"
        android:textColor="@color/abc_primary_text_disable_only_material_dark"
        tools:ignore="HardcodedText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="70dp"
        android:elevation="3dp"
        android:src="@drawable/camera80"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cmdPrincipal"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/cmdRemitos"
        android:layout_width="fill_parent"
        android:layout_height="72dp"
        android:background="@color/colorFeco3"
        android:clickable="true"
        android:focusable="true"
        android:onClick="pantallaremitos"
        android:text="@string/pantalla_remito"
        android:gravity="center_vertical|center"
        android:paddingLeft="50dp"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView1"
        app:layout_constraintBottom_toBottomOf="@+id/imageView1" />

    <Button
        android:id="@+id/cmdCargas"
        android:layout_width="fill_parent"
        android:layout_height="72dp"
        android:background="@color/colorFeco2"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical|center"
        android:onClick="pantallacargas"
        android:paddingLeft="50dp"
        android:text="@string/pantalla_cargas"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="70dp"
        android:elevation="3dp"
        android:src="@drawable/truck"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cmdRemitos"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txtResultadoRemito"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="normal|bold"
        app:layout_constraintTop_toBottomOf="@+id/cmdCargas"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imgFecovita"
        android:src="@drawable/logofecovita"
        android:layout_marginBottom="44dp"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>